--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@
 /EUW1_5804355661.json
 /format_A.csv
 /format_K_CON_UN_SENSO.csv
+/format_od.csv
+/format_od_ConunSenso.csv
+/format_og.csv
+/format_og_ConunSenso.csv
+/format_one_unit.csv
+/format_two_unit.csv
+/format_class_item.csv
+/format_cane_ConunSenso.csv
+/format_cane.csv
